docs/book/samples/appc/case_check.out
error[formatting]: identifiers are snake_case, all lowercase, always
  --> case_check.kso:1:3
   1 | myName = 1
         ^
error[formatting]: identifiers are snake_case, all lowercase, always
  --> case_check.kso:2:11
   2 | print "{myName}"
                 ^
